--- a/.github/workflows/facebook.yaml
+++ b/.github/workflows/facebook.yaml
@@ -1,4 +1,4 @@
-name: Selenium Java CI
+name: Run Selenium Tests
 
 on:
   push:
@@ -7,18 +7,18 @@ on:
     branches: [ main ]
 
 jobs:
-  build-and-test:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Repository
+    - name: Checkout repository
       uses: actions/checkout@v3
 
     - name: Set up Java
       uses: actions/setup-java@v3
       with:
-        java-version: '17'
         distribution: 'temurin'
+        java-version: '17'
 
     - name: Cache Maven packages
       uses: actions/cache@v3
@@ -28,8 +28,11 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-maven
 
-    - name: Build and Run Tests
-      run: mvn clean test
+    - name: Build with Maven
+      run: mvn clean install
+
+    - name: Run Tests
+      run: mvn test -Dsurefire.suiteXmlFiles=testng.xml
 
     - name: Upload TestNG Report
       if: always()
