--- a/.github/workflows/facebook.yaml
+++ b/.github/workflows/facebook.yaml
@@ -1,4 +1,4 @@
-name: Run Selenium Tests
+name: Run Facebook Login Tests
 
 on:
   push:
@@ -11,32 +11,32 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Set up Java
-      uses: actions/setup-java@v3
-      with:
-        distribution: 'temurin'
-        java-version: '17'
+      - name: Set up Java
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
 
-    - name: Cache Maven packages
-      uses: actions/cache@v3
-      with:
-        path: ~/.m2
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven
+      - name: Cache Maven packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven
 
-    - name: Build with Maven
-      run: mvn clean install
+      - name: Build with Maven
+        run: mvn clean install
 
-    - name: Run Tests
-      run: mvn test -Dsurefire.suiteXmlFiles=testng.xml
+      - name: Run Tests
+        run: mvn test -Dsurefire.suiteXmlFiles=testng.xml
 
-    - name: Upload TestNG Report
-      if: always()
-      uses: actions/upload-artifact@v3
-      with:
-        name: testng-report
-        path: test-output/
+      - name: Upload TestNG Report
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: testng-report
+          path: test-output/
