--- a/.github/workflows/facebook.yaml
+++ b/.github/workflows/facebook.yaml
@@ -32,23 +32,11 @@ jobs:
         run: mvn clean install
 
       - name: Run Tests
-        run: |
-          mvn test -Dsurefire.suiteXmlFiles=testng.xml
-          echo "Listing test-output folder:"
-          ls -la test-output || echo "test-output folder not found"
+        run: mvn test -Dsurefire.suiteXmlFiles=testng.xml
 
-      - name: Compress TestNG Report
-        if: always()
-        run: |
-          if [ -d "test-output" ]; then
-            tar -czf testng-report.tar.gz test-output
-          else
-            echo "test-output folder not found. Skipping compression."
-          fi
-
-      - name: Upload TestNG Report Artifact
+      - name: Upload TestNG Report
         if: always()
         uses: actions/upload-artifact@v3
         with:
           name: testng-report
-          path: testng-report.tar.gz
+          path: test-output/
